--- a/test.ipynb
+++ b/test.ipynb
@@ -13,6 +13,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Netherlands\n"
+     ]
+    }
+   ],
+   "source": [
+    "europe = {\"NL\" : \"Netherlands\", \"BE\" : \"Belgium\"}\n",
+    "print(europe[\"NL\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
